--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,44 @@
   }
 }
 
+table{
+  display: flex;
+  position: relative;
+  width: 88vh;
+  height: 44vh;
+  margin: auto;
+  background: none;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-content: stretch;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+tbody{
+  display: inline-table;
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+tr{
+  display: flex;
+  width: 50vh;
+}
+
+th {
+  width: 10vh;
+  height: 7vh;
+  border: ridge;
+}
+
+.keyboard{
+  margin: 0vw 20vw 5vw;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
