--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #202142;
+  background-color: #60a3bc;
   color: #fff;
-  line-height: 1.6;
+  font-size: 4vh;
 }
 
 ul {
@@ -66,14 +66,16 @@ header {
 .rating li,
 .num-display {
   position: relative;
-  background: #22517e;
+  background: #6a89cc;
   width: 50px;
   height: 50px;
   padding: 10px;
   text-align: center;
   font-size: 19px;
-  border: 1px #eee solid;
   transition: 0.3s;
+  box-shadow: 2px 3px #b7c2c5;
+  margin: 1px;
+  border-radius: 10%;
 }
 
 .rating li label {
@@ -94,7 +96,7 @@ header {
 
 .rating li:hover,
 .num-display {
-  background: #ff6a95;
+  background: #491e99;
   color: #fff;
 }
 
@@ -102,10 +104,10 @@ header {
   opacity: 0;
 }
 
-[type='radio']:checked ~ label {
-  background: #ff6a95;
-  color: #fff;
-}
+/*[type='radio']:checked ~ label {*/
+/*  background: #ff6a95;*/
+/*  color: #fff;*/
+/*}*/
 
 .input-group {
   display: flex;
@@ -118,7 +120,7 @@ header {
 input {
   flex-grow: 2;
   border: none;
-  font-size: 16px;
+  font-size: 30px;
 }
 
 input:focus {
