--- a/src/index.css
+++ b/src/index.css
@@ -222,15 +222,18 @@ input:focus {
 
 @media (max-width: 600px) {
   .rating li {
-    margin: 10px 3px;
+    margin: 2px 1px;
+    width: 30px;
+    height: 35px;
+    padding: 5px;
+    font-size: 17px
   }
 
   .rating {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    margin: 30px 0 40px;
+    margin: 25px 0 40px;
   }
 
   .input-group input {
